10. Dez. 2012 - amo -  added TearDownHandler to execute all @TearDown annotations when application is closed, updated AFXWorkbench to use TearDownHandler
10. Dez. 2012 - amo -  Fixed in StateComponentRunWorker: OnStart and OnTeardown annotations activated
06. Dez. 2012 - amo -  Fixed in FXComponentReplaceWorker, Active(false) was only evaluated in handle method but never in postHandle method
06. Dez. 2012 - amo -  Fixed StateComponentRunWorker, set component to "started" after init
27. Nov. 2012 - amo -  Fixed nullpointer in FXComponentWorker when component does not return a valid component.
12. Sep. 2012 - amo -  update FXAction to ensure thread safety
06. Sep. 2012 - amo -  changed inner and outer locking of component in worker threads; inner locking replaced by wait/notify. At the end on nonJavaFX thread a wait starts... when JavaFX application Thread finishes he notifies so execution loop can proceed. Outer loop: semaphore replaces an atomic boolean lock
28. Aug. 2012 - amo -  Created  process to Shutdown all JacpFX correct; Created ShutdownUtil class; set name of JacpFX Threads
26. Jun. 2012 - amo -  updated refresh behavior when switching between components
31. Mai. 2012 - amo -  added resourceBundle and locale handling to declarative components
30. Mai. 2012 - amo -  removed AFXMLComponent and add behavior to AFXComponent 
29. Mai. 2012 - amo -  add checkable class that can be implemented by components where the state should not be changed after initilaisation; implemented FXML perspective handling. Add PerspectiveLayout abstract class to handle FXPerspectiveLayout and FXMLPerspectiveLayout.
23. Mai. 2012 - amo -  switch to JavaFX 2.2
21. Mai. 2012 - amo -  add missing source and target ID when throw exception if component was not found
20. Mai. 2012 - amo -  Add support for FXML components, add FXMLReplace worker due to differences with FXComponents